Fix overflow-x for the body

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,9 @@
     padding: 0px;
     margin: 0px;
 }
+body{
+    overflow-x:hidden;
+}
 
 .bg {
     background-image: url("./Assests/Landing\ Page.png");
